# dotprompt

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: workflow.yml
dotprompt/: __init__.py  prompt.py
